# aetherclaw

./: .gitignore  RALPH_PROMPT.md  README.md  aether_claw.py  audit_logger.py  brain_index.py  config_loader.py  dashboard.py  glm_client.py  heartbeat_daemon.py  install.sh  keygen.py  kill_switch.py  notifier.py  prd.json  progress.txt  pyproject.toml  ralph.sh  requirements.txt  safe_skill_creator.py  safety_gate.py  skill_loader.py  swarm_config.json  tui.py
brain/: audit_log.md  heartbeat.md  memory.md  soul.md  user.md
isolation/: __init__.py  docker_wrapper.py  worktree.py
skills/: README.md  example_skill.py
swarm/: __init__.py  action_worker.py  architect.py  orchestrator.py  worker.py
tasks/: __init__.py  git_scanner.py  health_monitor.py  memory_updater.py  skill_checker.py
